# fwh_genomics

./: CLAUDE.md  README.md  USER_GUIDE.md  agent.py  pyproject.toml
src/genomics/: __init__.py  catalog.py  catalog.yaml
src/genomics/ffl/: genomics.ffl  genomics_cache.ffl  genomics_cache_types.ffl  genomics_cache_workflows.ffl  genomics_index_cache.ffl  genomics_operations.ffl  genomics_resolve.ffl
src/genomics/handlers/: __init__.py  cache_handlers.py  genomics_handlers.py  index_handlers.py  operations_handlers.py  resolve_handlers.py
src/genomics/handlers/shared/: __init__.py  genomics_utils.py
src/genomics/tools/: README.md  __init__.py  align-reads.sh  align_reads.py  annotate.py  annotate.sh  call-variants.sh  call_variants.py  cohort-analytics.sh  cohort_analytics.py  download.py  download.sh  index.py  index.sh  ingest-reference.sh  ingest_reference.py  joint-genotype.sh  joint_genotype.py  normalize-filter.sh  normalize_filter.py  publish.py  publish.sh  qc-reads.sh  qc_reads.py  resolve.py  resolve.sh  validate.py  validate.sh
src/genomics/tools/_lib/: __init__.py  cache.py  index.py  operations.py  pipeline.py  resolve.py  resources.py
tests/mocked/py/: conftest.py  test_cache_pipeline.py  test_catalog_manifest.py  test_cohort_analysis.py  test_handler_dispatch_genomics.py
