[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomics"
version = "0.1.0"
description = "Genomics cohort analysis simulator workflows for Facetwork — QC, alignment, variant calling, joint genotyping, annotation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Ralph Lemke"}]
keywords = ["facetwork", "ffl", "genomics", "bioinformatics", "variant-calling", "cohort-analysis"]

dependencies = [
    "facetwork>=0.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/rlemke/fwh_genomics"

[project.entry-points."facetwork.domains"]
genomics = "genomics:domain"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genomics = [
    "ffl/*.ffl",
    "ffl/*.json",
    "catalog.yaml",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "E402", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
